project(Concurrent)
cmake_minimum_required(VERSION 3.14)
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_RE True)
set(CMAKE_CXX_FLAGS "-fstandalone-debug")
list(APPEND FOLDERS basic)
message(${FOLDERS})
foreach(folder ${FOLDERS})
file(GLOB CPPS ${folder}/*.cpp)
    foreach(CPP ${CPPS})
        STRING(REGEX REPLACE ".+/(.+)\\..*" "\\1" FILE_NAME ${CPP}})
        add_executable(${FILE_NAME} ${CPP})
    endforeach()
endforeach()

